--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.ico" />
     <title>GB Transfer - Fast & Secure File Sharing</title>
     <meta name="description" content="Share files instantly with GB Transfer. Fast, secure, and fun file transfers with optional password protection and auto-expiry. Upload any file type up to 100MB." />
     <meta name="author" content="Girish Lade" />
